--- a/web-mail/package.json
+++ b/web-mail/package.json
@@ -17,6 +17,7 @@
     "styled-reset": "^4.4.4"
   },
   "devDependencies": {
+    "@types/node": "^18.11.15",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/styled-components": "^5.1.26",
