--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/Hire-Hoffee/Web-Mail#readme",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "mongodb": "^5.0.1"
+    "mongodb": "^5.0.1",
+    "stream-json": "^1.8.0"
   }
 }
